--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,10 +4,13 @@
 			<div class="card-header">
 				<h3>LOGIN</h3>
 			<div class="img">
-                
+
+                <img src="/assets/image/stock.png" alt="">
             </div>
 				
 			</div>
+			
+ 
 			<div class="card-body">
 				<form>
 				
