--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,17 @@
 .img{
-    background-image: url(../home/image/invent.jpeg);
+    background-image: url(../home/image/hand.jpeg);
     background-size: cover;
 background-repeat: no-repeat;
  height: 850px;
 width: 100%;
+}
+.head2{
+    color:rgb(252, 0, 176);
+    text-align: center;
+    margin-top:0px;
+    padding: 0px;
+    font-weight: 800;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+ 
 }
