--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -91,8 +91,8 @@ margin-left: 4px;
 h3{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.img{
-    background-image: url(../login/image/stock.png);
+img{
+    /* background: url('/assets/image/stock.png'); */
     height: 40px;
     width: 40px;
 }
