--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,20 +12,23 @@
 			
  
 			<div class="card-body">
-				<form>
+				<form [formGroup]="loginForm">
 				
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" name="usname"[(ngModel)]="uname" placeholder="Enter username">
+						<input type="text" class="form-control" name="usname"formControlName ="uname" placeholder="Enter username">
+						<div *ngIf="(loginForm.get('uname')?.touched || loginForm.get('uname')?.dirty) && loginForm.get('uname')?.errors"class="error">invalid username</div>
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-                        <input type="password" class="form-control" name="psswd"[(ngModel)]="pswd" placeholder="Enter password">
+                        <input type="password" class="form-control"name="psswd" formControlName ="pswd" placeholder="Enter password"><br>
+						<div *ngIf="(loginForm.get('pswd')?.touched || loginForm.get('pswd')?.dirty) && loginForm.get('pswd')?.errors"class="error">invalid password</div>
+
 					</div>
 					
 					<div class="form-group">
